<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.leole.timetracker.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="@string/strNewEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNewEmployee"
        android:onClick="btnNewEmployeeOnClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:text="@string/strEmployeeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEmployeeList"
        android:onClick="btnEmployeeListOnClick"
        android:layout_alignBottom="@+id/btnNewEmployee"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="68dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/time_tracker"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/txtTimeTracker"
        android:layout_toStartOf="@+id/txtTimeTracker"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTimeTracker"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:layout_alignBottom="@+id/imageView" />

</RelativeLayout>
